--- a/packages/alarm-panel/zone3.yaml
+++ b/packages/alarm-panel/zone3.yaml
@@ -1,10 +1,10 @@
 binary_sensor:
-
   - id: zone3
     name: Zone 3    
     pin:
       number: $zone3
       mode: INPUT_PULLUP
+      inverted: true
     platform: gpio   
     filters:
       - delayed_on_off: $sensor_debounce_time
